--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html lang="cz">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta title="Vzory - Plna moc" name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vzory - Plná moc</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vzor - plná moc</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
+<header>
+    <h1>Web App with PDF Generator</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="text.html">Generate PDF</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </nav>
+</header>
 
 <body>
-    <script src="js/script.js"></script>
-
-
+    <h2 id="kojot">Text</h2>
+    <input type="text1">t</input>
+    <input type="text2">t1</input>
+    <input type="text3">t2</input>
+    <input type="text4">t3</input>
+    <button type="button" onclick="doSomething()">Text</button>
+    <p id="demo"></p>
+    <p id="demo1"></p>
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
