--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vzor - plná moc</title>
+    <title>Vzory - Plná moc k přepisu/Kupní smlouva automobil</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <header>
@@ -12,22 +12,16 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="text.html">Generate PDF</a></li>
+            <li><a href="/vzory/kupni-smlouva-vozidlo.html">Kupní smlouva</a></li>
+            <li><a href="/vzory/plna-moc-vozidlo.html">Plná moc</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
 </header>
 
 <body>
-    <h2 id="kojot">Text</h2>
-    <input type="text1">t</input>
-    <input type="text2">t1</input>
-    <input type="text3">t2</input>
-    <input type="text4">t3</input>
-    <button type="button" onclick="doSomething()">Text</button>
-    <p id="demo"></p>
-    <p id="demo1"></p>
-    <script src="scripts/main.js"></script>
+    <h1></h1>
+
 </body>
 
 </html>
