--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vzory - Plná moc k přepisu/Kupní smlouva automobil</title>
     <link rel="stylesheet" href="style/style.css">
+    <script src="scripts/main.js"></script>
 </head>
 <header>
     <h1>Web App with PDF Generator</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="/vzory/kupni-smlouva-vozidlo.html">Kupní smlouva</a></li>
-            <li><a href="/vzory/plna-moc-vozidlo.html">Plná moc</a></li>
+            <li><a href="kupni-smlouva-vozidlo.html">Kupní smlouva</a></li>
+            <li><a href="plna-moc-vozidlo.html">Plná moc</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
 </header>
 
 <body>
-    <h1></h1>
-
+    <h1 id="h1"></h1>
+    <button onclick="somethingDo()">test</button>
 </body>
 
 </html>
