--- a/vzory/kupni-smlouva-vozidlo.html
+++ b/vzory/kupni-smlouva-vozidlo.html
@@ -8,20 +8,28 @@
     <script src="../scripts/main.js"></script>
     <title>Document</title>
 </head>
-<header>
-    <h1>Web App with PDF Generator</h1>
 
-    <nav class="menu">
-        <a href="../index.html">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Contact</a>
-    </nav>
-</header>
 
 <body>
+    <header>
+        <h1>Web App with PDF Generator</h1>
 
+        <nav class="menu">
+            <a href="../index.html">Vzory</a>
+            <a href="#">O sl</a>
+            <a href="#">Services</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Kontakt</a>
+        </nav>
+    </header>
+    <footer>
+        <p>
+            &copy;
+            <script>document.write(new Date().getFullYear());</script> Lukáš Strnad
+        </p>
+    </footer>
 </body>
+
+
 
 </html>
