--- a/index.html
+++ b/index.html
@@ -4,44 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta title="Vzory Plna moc / Vzory Kupni smlouva / Vzory Vypoved">
     <title>Vzory - Plná moc k přepisu/Kupní smlouva automobil</title>
     <link rel="stylesheet" href="style/style.css">
     <script src="scripts/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
-<header>
-    <h1>Web App with PDF Generator</h1>
-
-    <nav class="menu">
-        <a href="index.html">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Contact</a>
-    </nav>
-</header>
 
 <body>
-    <div id="text">
-        This is the content of the div with id "text".
-    </div>
-    <div class="grid-container">
-        <a href="/vzory/kupni-smlouva-vozidlo.html"><img src="images/vzor-kupni-smouva-na-auto.jpg"></a>
-        <a href="/vzory/plna-moc-vozidlo.html"><img src="images/vzor-plna-moc-na-prepis.jpg"></a>
-        <a href="/vzory/plna-moc-vozidlo.html"><img src="images/vzor-plna-moc-na-prepis.jpg"></a>
-        <a href="/vzory/plna-moc-vozidlo.html"><img src="images/vzor-plna-moc-na-prepis.jpg"></a>
-        <a href="/vzory/plna-moc-vozidlo.html"><img src="images/vzor-plna-moc-na-prepis.jpg"></a>
-    </div>
+    <header>
+        <h1>Web App with PDF Generator</h1>
+    </header>
+    <main>
+        <div class="grid-container">
+            <a href="/vzory/kupni-smlouva-vozidlo.html"><img src="images/vzor-kupni-smouva-na-auto.jpg"></a>
+            <a href="/vzory/plna-moc-vozidlo.html"><img src="images/vzor-plna-moc-na-prepis.jpg"></a>
+            <a href="/vzory/plna-moc-vozidlo.html"><img src="images/vzor-plna-moc-na-prepis.jpg"></a>
+            <a href="/vzory/plna-moc-vozidlo.html"><img src="images/vzor-plna-moc-na-prepis.jpg"></a>
+            <a href="/vzory/plna-moc-vozidlo.html"><img src="images/vzor-plna-moc-na-prepis.jpg"></a>
+        </div>
 
-    <button onclick="createPDF()">test</button>
-    <script>
-
-    </script>
+        <button onclick="createPDF()">test</button>
+    </main>
+    <footer>
+        <p>
+            &copy;
+            <script>document.write(new Date().getFullYear());</script> Lukáš Strnad
+        </p>
+    </footer>
 </body>
-<footer>
-    <p>&copy;
-        <script>document.write(new Date().getFullYear());</script> YourCompany. All rights reserved.
-    </p>
-</footer>
+
 
 </html>
